[gd_scene load_steps=22 format=3 uid="uid://boqc2y4amjeqp"]

[ext_resource type="Script" path="res://scenes/creature/Creature.gd" id="1_4jpvp"]
[ext_resource type="Script" path="res://addons/beehave/nodes/beehave_tree.gd" id="2_6f3ey"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/selector.gd" id="3_l1ib0"]
[ext_resource type="Script" path="res://addons/beehave/nodes/composites/sequence_star.gd" id="4_0y2j8"]
[ext_resource type="Script" path="res://ai/conditions/IsHungryCondition.gd" id="5_7u07e"]
[ext_resource type="Script" path="res://ai/actions/MoveToBedAction.gd" id="6_7urcs"]
[ext_resource type="Script" path="res://ai/actions/WalkToFoodAction.gd" id="7_qslpf"]
[ext_resource type="Script" path="res://ai/actions/WalkAroundAction.gd" id="8_rtp40"]
[ext_resource type="Texture2D" uid="uid://d4n35pl3x5ipp" path="res://assets/egg.png" id="9_fefmi"]
[ext_resource type="Script" path="res://ai/conditions/IsSleepyCondition.gd" id="9_g5f5m"]
[ext_resource type="Script" path="res://ai/actions/IdleAction.gd" id="9_milg3"]
[ext_resource type="Script" path="res://ai/actions/SleepAction.gd" id="10_3qdq7"]
[ext_resource type="PackedScene" uid="uid://b8uamh30l86kw" path="res://scenes/creature/emotions/singing_bubble.tscn" id="10_t2ebw"]
[ext_resource type="Texture2D" uid="uid://bg27ma6ae0ik6" path="res://assets/creature_sprites/creature3.png" id="13_nli4w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b7s5w"]
radius = 8.24621

[sub_resource type="CircleShape2D" id="CircleShape2D_dyisl"]
radius = 16.0

[sub_resource type="Animation" id="Animation_rs6cf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CreatureSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4tn4i"]
resource_name = "idleing"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CreatureSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 3]
}

[sub_resource type="Animation" id="Animation_i8wf4"]
resource_name = "sleeping"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CreatureSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_1xeca"]
resource_name = "walking"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CreatureSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iva38"]
_data = {
"RESET": SubResource("Animation_rs6cf"),
"idleing": SubResource("Animation_4tn4i"),
"sleeping": SubResource("Animation_i8wf4"),
"walking": SubResource("Animation_1xeca")
}

[node name="Creature" type="CharacterBody2D" groups=["Creature"]]
z_index = 2
y_sort_enabled = true
collision_layer = 0
input_pickable = true
motion_mode = 1
safe_margin = 0.001
script = ExtResource("1_4jpvp")
movement_speed = 30.0
movement_range = 200

[node name="BeehaveTree" type="Node" parent="." node_paths=PackedStringArray("blackboard")]
script = ExtResource("2_6f3ey")
actor_node_path = NodePath("..")
blackboard = NodePath("@Node@17520")

[node name="Either" type="Node" parent="BeehaveTree"]
script = ExtResource("3_l1ib0")

[node name="Sleep" type="Node" parent="BeehaveTree/Either"]
script = ExtResource("4_0y2j8")

[node name="IsSleepyCondition" type="Node" parent="BeehaveTree/Either/Sleep"]
script = ExtResource("9_g5f5m")

[node name="MoveToBed" type="Node" parent="BeehaveTree/Either/Sleep"]
script = ExtResource("6_7urcs")

[node name="Sleep" type="Node" parent="BeehaveTree/Either/Sleep"]
script = ExtResource("10_3qdq7")

[node name="FindFood" type="Node" parent="BeehaveTree/Either"]
script = ExtResource("4_0y2j8")

[node name="IsHungryCondition" type="Node" parent="BeehaveTree/Either/FindFood"]
script = ExtResource("5_7u07e")

[node name="WalkToClosestFoodAction" type="Node" parent="BeehaveTree/Either/FindFood"]
script = ExtResource("7_qslpf")

[node name="IdleAction" type="Node" parent="BeehaveTree/Either/FindFood"]
script = ExtResource("9_milg3")

[node name="WalkAround" type="Node" parent="BeehaveTree/Either"]
script = ExtResource("4_0y2j8")

[node name="WalkAroundAction" type="Node" parent="BeehaveTree/Either/WalkAround"]
script = ExtResource("8_rtp40")

[node name="IdleAction" type="Node" parent="BeehaveTree/Either/WalkAround"]
script = ExtResource("9_milg3")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
target_desired_distance = 5.0
path_max_distance = 50.0
debug_enabled = true

[node name="EggSprite" type="Sprite2D" parent="."]
scale = Vector2(0.063, 0.063)
texture = ExtResource("9_fefmi")

[node name="CreatureSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("13_nli4w")
hframes = 5
region_rect = Rect2(0, 0, 32, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_b7s5w")

[node name="Camera2D" type="Camera2D" parent="." groups=["CreatureCamera"]]
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.0

[node name="EmotionContainer" type="Node2D" parent="."]
position = Vector2(0, -23)

[node name="SingingBubble" parent="EmotionContainer" instance=ExtResource("10_t2ebw")]

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
shape = SubResource("CircleShape2D_dyisl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iva38")
}

[connection signal="pressed" from="TouchScreenButton" to="." method="_on_touch_screen_button_pressed"]
